# rtmc_client

./: .gitignore  LICENSE.txt  README.md  make.sh  pyproject.toml
src/rtmc_client/: __init__.py  device.py  emulation_server.py
tests/: conftest.py  test_device.py  test_emulation_server.py
